--- a/metadata.yml
+++ b/metadata.yml
@@ -1,7 +1,7 @@
-group: Z3  # replace with your own group (A1, A2, B1, B2, C1, SC1)
-names:  # Replace with your own names (lastname first)
-  - Dupont Antoine
-  - Ntamack Romain
-emails:  # Replace with your own INSA email address
-  - antoine.dupont@insa-toulouse.fr
-  - romain.ntamack@insa-toulouse.fr
+group: A2
+names:
+  - Raphael Rees
+  - Y-quynh Nyguyen
+emails:
+  - rees@insa-toulouse.fr
+  - yqnguyen@insa-toulouse.fr
