--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.classes</groupId>
-  <artifactId>ChatSystem</artifactId>
+  <artifactId>chatSystem</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>ChatSystem</name>
+  <name>chatSystem</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -18,12 +18,44 @@
 
   <dependencies>
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-    <dependency>
+    <!--dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.33</version>
-    </dependency>
+    </dependency-->
 
   </dependencies>
+
+  <!--<build>
+    <sourceDirectory>src/main</sourceDirectory>
+ 
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.0.2</version>
+        <configuration>
+          <includes><include>**/core/**</include></includes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build> -->
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>model.MainClass</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 
 </project>
