--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
-*.jar
-.vscode/
+# Maven
+target/
+*.iml
+
+# Compiled Java classes
 *.class
+
+# Configuration files
+.idea/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
+.idea/gradle.xml
+.idea/libraries
+.idea/caches
+.idea/codeStyles/
+.idea/codeInsightDaemons/
+.idea/dataSources/
+.project
+
+# Logs
+*.log
+
+# Package files
+*.jar
+*.war
+*.ear
+
+
