--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.classes</groupId>
-  <artifactId>chatSystem</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <groupId>org.insa.rees_nguyen</groupId>
+  <artifactId>chatsystem</artifactId>
+  <version>0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>chatSystem</name>
@@ -18,17 +20,19 @@
   </properties>
 
   <dependencies>
-    <!-- Add your dependencies here -->
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>RELEASE</version>
+      <version>5.10.1</version>
       <scope>test</scope>
     </dependency>
 
@@ -57,6 +61,7 @@
   <build>
     <plugins>
       <plugin>
+
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <!-- Updated to the latest version that supports Java 17 -->
@@ -93,6 +98,10 @@
           </execution>
         </executions>
       </plugin>
+
     </plugins>
   </build>
+
+
+
 </project>
