--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,17 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.19.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.19.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -35,6 +46,8 @@
       <version>5.10.1</version>
       <scope>test</scope>
     </dependency>
+
+
 
 
     <dependency>
@@ -64,7 +77,6 @@
 
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <!-- Updated to the latest version that supports Java 17 -->
         <version>3.11.0</version>
         <configuration>
           <source>17</source>
@@ -75,7 +87,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <!-- Updated to the latest version -->
         <version>3.3.0</version>
         <configuration>
           <descriptorRefs>
